# pkg/pb/service.pb.validate.go
@@ -33,9 +33,6 @@ var (
 	_ = ptypes.DynamicAny{}
 )
 
-// define the regex for a UUID once up-front
-var _service_uuidPattern = regexp.MustCompile("^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$")
-
 // Validate checks the field values on UserDto with the rules defined in the
 // proto definition for this message. If any rules are violated, an error is returned.
 func (m *UserDto) Validate() error {
@@ -286,10 +283,6 @@ func (m *RelationDto) Validate() error {
 	// no validation rules for Relation
 
 	// no validation rules for UserId
-
-	// no validation rules for DisplayOrder
-
-	// no validation rules for PatientId
 
 	return nil
 }
